--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
 	runtimeOnly 'com.h2database:h2'
 	compile 'com.marcosbarbero.cloud:spring-cloud-zuul-ratelimit:2.2.0.RELEASE'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
